# bandcamp-downloader

./: .gitignore  Dockerfile  LICENSE  README.md  bandcamp-downloader.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
