[tool.poetry]
name = "bandcamp-downloader"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.27.1"
browser-cookie3 = "^0.14.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
